--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -1,66 +1,64 @@
 .sidebar {
-    flex: 3;
-    margin: 20px;
-    padding-bottom: 30px;
-   
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  flex: 3;
+  margin: 20px;
+  padding-bottom: 30px;
+
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .sidebar-img {
-    width: 200px;
-    height: 200px;
-    object-fit: cover;
-    margin-top: 15px;
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  margin-top: 15px;
 }
 
 .sidebar-items > p {
-    padding: 30px;
-    text-align: center;
-    color: rgb(93, 93, 93);
+  padding: 30px;
+  text-align: center;
+  color: rgb(93, 93, 93);
 }
 .sidebar-items {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-font-size: 20px;
-color: rgb(50, 50, 50);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 20px;
+  color: rgb(50, 50, 50);
 }
 
 .sidebar-title {
-margin: 10px;    
-padding: 5px;
-width: 80%;
-border-top: 1px solid gray;
-border-bottom:1px solid gray; ;
-font-family: Arial, Helvetica, sans-serif;
-line-height: 1.5;
-text-align: center;
+  margin: 10px;
+  padding: 5px;
+  width: 80%;
+  border-top: 1px solid gray;
+  border-bottom: 1px solid gray;
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 1.5;
+  text-align: center;
 }
 
 .sidebar-item {
-    margin: 10px;
-    line-height: 1.5;
-    text-align: center;
+  margin: 10px;
+  line-height: 1.5;
+  text-align: center;
 }
 
 .sidebar-list {
-    margin-top: 15px;
-    list-style: none;
-    
+  margin-top: 15px;
+  list-style: none;
 }
 
 .sidebar-item svg {
   font-size: 30px;
-    margin-top: 15px;
-cursor: pointer;
+  margin-top: 15px;
+  cursor: pointer;
 }
 @media only screen and (max-width: 700px) {
-    .sidebar {
-      height: 800px;
-    }
+  .sidebar {
+    height: 800px;
   }
-  
+}
