added styling to mobile responsive and shop

--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -23,6 +23,7 @@ form {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 300px;
 }
 
 form > input {
@@ -30,6 +31,7 @@ form > input {
   margin: 10px;
   border-radius: 10px;
   border: none;
+  width: 100%;
   
 }
 
@@ -49,3 +51,10 @@ form > input {
   font-family: "Courier New", Courier, monospace;
   color: rgb(86, 86, 86);
 }
+@media only screen and (max-width: 700px) {
+  .contact-form , .form {
+    width: 100%;
+    
+  }
+  }
+ 
