--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -4,6 +4,7 @@
   background-image: url("https://www.creativefabrica.com/wp-content/uploads/2020/07/15/Watercolor-Background-Texture-Pink-Graphics-4632195-2-580x386.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  
 }
 
 .header-titles {
@@ -13,6 +14,7 @@
   font-family: Arial, Helvetica, sans-serif;
   color: rgb(95, 95, 95);
   font-family: "Lora", "serif";
+ 
 }
 
 .about-img {
@@ -26,11 +28,13 @@
   position: absolute;
   top: 17%;
   font-size: 100px;
+  z-index: 0;
 }
 .sm {
   position: absolute;
   top: 10%;
   font-size: 22px;
+  z-index: 0;
 }
 
 .home {
