--- a/src/styles/Shop.css
+++ b/src/styles/Shop.css
@@ -23,7 +23,6 @@
   }
 }
 
-
 /* .loading {
   font-size: 20px;
   font-family: Arial, Helvetica, sans-serif;
@@ -38,6 +37,10 @@
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
