--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -7,6 +7,7 @@
 }
 
 .sign-in {
+  width: 600px;
   display: flex;
   flex-direction: column;
   padding: 100px;
@@ -24,6 +25,8 @@
   font-size: 20px;
   font-family: Arial, Helvetica, sans-serif;
   outline: none;
+  width: 80%;
+  background-color: #e5e5e5;
 }
 
 .sign-in > button {
