replacing CSS with Tailwind CSS

--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -1,4 +1,4 @@
-.navbar {
+/* .navbar {
   height: 50px;
   background-color: white;
   color: rgb(70, 70, 70);
@@ -108,4 +108,4 @@
   a {
     display: none;
   }
-}
+} */
