styling Nav/added dropdown menu

--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,4 +1,4 @@
-.contact-wrapper {
+/* .contact-wrapper {
   height: 90vh;
   background-image: url("https://img.freepik.com/free-vector/white-abstract-wallpaper_23-2148830026.jpg?w=2000");
   background-repeat: no-repeat;
@@ -56,4 +56,4 @@ form > input {
   .form {
     width: 100%;
   }
-}
+} */
