--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -64,8 +64,8 @@
 
 .reorder-icon {
   color: rgb(81, 81, 81);
-}
-#open {
+} */
+/* #open {
   height: 100vh;
 }
 #open .reorder-icon {
@@ -89,9 +89,9 @@
   flex-direction: column;
   padding-left: 70px;
   padding-top: 100px;
-}
+} */
 
-.shopping-cart {
+/* .shopping-cart {
   color: rgb(74, 74, 74);
 }
 
