--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,8 +1,8 @@
-.footer {
+/* .footer {
     height: 40px;
     background-color: rgb(0, 0, 0);
     color: white;
     display: flex;
     justify-content: center;
     align-items: center;
-}
+} */
