displayed username on navbar after login

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap");
 
 .about-header {
-  background-image: url("https://www.creativefabrica.com/wp-content/uploads/2020/07/15/Watercolor-Background-Texture-Pink-Graphics-4632195-2-580x386.jpg");
+  /* background-image: url("https://www.creativefabrica.com/wp-content/uploads/2020/07/15/Watercolor-Background-Texture-Pink-Graphics-4632195-2-580x386.jpg"); */
   background-repeat: no-repeat;
   background-size: cover;
 }
