--- a/src/styles/Shop.css
+++ b/src/styles/Shop.css
@@ -1,18 +1,54 @@
 .shop-header {
-  min-height: 90vh;
-  background-image: url("https://img.freepik.com/free-photo/watercolor-background-papaya-whip_53876-101916.jpg?w=2000");
+  /* min-height: 90vh; */
+  /* background-image: url("https://img.freepik.com/free-photo/watercolor-background-papaya-whip_53876-101916.jpg?w=2000");
   background-repeat: no-repeat;
-  background-size: cover;
-  display: flex;
+  background-size: cover; */
+  /* display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 100%; */
+  /* background: linear-gradient(to right,#d9dfe3 ,#3d454b); */
+}
+.paginationBttns {
+  width: 80%;
+  height: 40px;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  
+}
+
+.paginationBttns a {
+  padding: 10px;
+  margin: 8px;
+  border-radius: 5px;
+  border: 1px solid #4b97fa;
+  color: #4c8df0;
+  cursor: pointer;
+}
+
+.paginationBttns a:hover {
+  color: white;
+  background-color: #4d8bf7;
+}
+
+.paginationActive a {
+  color: white;
+  background-color: #61a0f3;
 }
 
 @media only screen and (max-width: 1700px) {
   .shop-header {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    height: auto;
+  }
+}
+@media only screen and (max-width: 700px) {
+  .paginationBttns{
+  display: flex;
+  justify-content: center;
+
   }
 }
 @media only screen and (max-width: 700px) {
@@ -20,6 +56,7 @@
     display: grid;
     grid-template-columns: 1fr;
     place-items: center;
+    height: auto;
   }
 }
 
