--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -3,7 +3,7 @@
 
   display: flex;
   justify-content: center;
-  align-items: start;
+  align-items: flex-start;
   background-image: url("https://images.unsplash.com/photo-1576201836106-db1758fd1c97?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
 
   background-position: center;
