--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -1,14 +1,15 @@
 .landing {
   height: 84.5vh;
-
+width: auto;
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  background-image: url("https://images.unsplash.com/photo-1576201836106-db1758fd1c97?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
+background-color: rgb(28, 30, 30);
+padding: 30px;
 
-  background-position: center;
+  /* background-position: center;
   background-size: cover;
-  object-fit: cover;
+  object-fit: cover; */
 }
 
 .landing-container {
@@ -18,6 +19,7 @@
   color: white;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-size: 40px;
+  margin-top: 50px;
 }
 
 .landing-container > h1 {
